# CUBOOLAP

./: .gitignore  CMakeLists.txt  README.md  iniciar.bat  iniciar.sh
.cache/clangd/index/: AnalizadorEsquema.cpp.55961A03597CEF87.idx  AnalizadorEsquema.h.2D7B733765A66861.idx  ConsolaProgreso.cpp.1CD97F59DA19E6FB.idx  ConsolaProgreso.h.B8B20AC88047F7AE.idx  ConstructorConsultas.cpp.DDF8B12E9563E5FE.idx  ConstructorConsultas.h.1454A4353C3C10D8.idx  DashboardReconocimiento.cpp.5A6EAC23CB3746A2.idx  DashboardReconocimiento.h.FE0ADD345314A90D.idx  (+46 more)
config/: db_config.ini
database/: INSTRUCCIONES_EJECUCION.md  QUICKSTART.md  README_BD4-2025.md  ejecutar_semilla.bat  seed_bd4-2025.sql
db/: semilla.sql  semilla_completa.sql
docs/: GUIA_DEPURACION.md  MANUAL_USUARIO.md  MEJORAS_FUTURAS.md  RESUMEN_TECNICO.md
src/: main.cpp  resources.qrc
src/core/: AnalizadorEsquema.cpp  AnalizadorEsquema.h  GeneradorReportes.cpp  GeneradorReportes.h  GestorBaseDatos.cpp  GestorBaseDatos.h  MotorCarga.cpp  MotorCarga.h
src/ui/: ConsolaProgreso.cpp  ConsolaProgreso.h  ConstructorConsultas.cpp  ConstructorConsultas.h  DashboardReconocimiento.cpp  DashboardReconocimiento.h  DialogoConexion.cpp  DialogoConexion.h  DialogoDrillThrough.cpp  DialogoDrillThrough.h  DialogoFiltros.cpp  DialogoFiltros.h  Estilos.h  EstudioModelado.cpp  EstudioModelado.h  GestorTemas.cpp  GestorTemas.h  HistorialConsultas.cpp  HistorialConsultas.h  IndicadorFase.cpp  IndicadorFase.h  PanelAnalisis.cpp  PanelAnalisis.h  PanelDimensiones.cpp  PanelDimensiones.h  PanelMedidas.cpp  PanelMedidas.h  PanelOperacionesOlap.cpp  PanelOperacionesOlap.h  PantallaIntroduccion.cpp  PantallaIntroduccion.h  SimuladorRendimiento.cpp  SimuladorRendimiento.h  TablaDinamica.cpp  TablaDinamica.h  ToastNotifier.cpp  ToastNotifier.h  VentanaPrincipal.cpp  VentanaPrincipal.h  VisorOlap.cpp  (+1 more)
(+6 files in other folders)
